[tool.poetry]
name = "df-web-whisperer"
version = "0.1.0"
description = ""
authors = ["MalshaDissanayake <dmkmd333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
selenium = "^4.10.0"
chromedriver-autoinstaller = "^0.4.0"
scrapy-playwright = "^0.0.36"
scrapy-selenium = "^0.0.7"
webdriver-manager = "^4.0.1"
scrapy = "^2.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
